# dvm-engine

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  HACKING.md  Makefile  README.md  build.bat  compile.sh
.github/: release.yml
.github/workflows/: release.yml
assets/models/: sphere_reflective.mtl
cmake/: imgui.cmake  portaudio.cmake
models/: shading_test_box.mtl  sphere_rough.mtl
shaders/: physics.comp  point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert
src/: dvm_app.cpp  dvm_app.hpp  dvm_audio.cpp  dvm_audio.hpp  dvm_buffer.cpp  dvm_buffer.hpp  dvm_camera.cpp  dvm_camera.hpp  dvm_components.cpp  dvm_components.hpp  dvm_descriptors.cpp  dvm_descriptors.hpp  dvm_device.cpp  dvm_device.hpp  dvm_entity.hpp  dvm_frame_info.hpp  dvm_game_object.cpp  dvm_game_object.hpp  dvm_gui.cpp  dvm_gui.hpp  dvm_input.cpp  dvm_input.hpp  dvm_material.cpp  dvm_material.hpp  dvm_model.cpp  dvm_model.hpp  dvm_pipeline.cpp  dvm_pipeline.hpp  dvm_renderer.cpp  dvm_renderer.hpp  dvm_scene.cpp  dvm_scene.hpp  dvm_swap_chain.cpp  dvm_swap_chain.hpp  dvm_texture.cpp  dvm_texture.hpp  dvm_utils.hpp  dvm_window.cpp  dvm_window.hpp  keyboard_movement_controller.cpp  (+6 more)
src/gui/: imgui_glfw.cpp  imgui_impl_glfw.h  imgui_vulkan_renderer.cpp  imgui_vulkan_renderer.h
src/gui/panels/: outliner.cpp  outliner.hpp  panel.hpp
src/shaders/: simple_shader.vert
src/systems/: physics_system.cpp  physics_system.hpp  point_light_system.cpp  point_light_system.hpp  simple_render_system.cpp  simple_render_system.hpp
test/: CMakeLists.txt  my_test.cpp
